# tasks

./: .gitignore  .replit  LICENSE  LICENSE.md  Readme.md  create.txt  emoji_test.py  main.py  my_todolist.js  my_todolist.json  pyproject.toml  setup.py  tasks - Backup.py  tasks.py  tasks.rar  tasks_crayons.py  tasks_sql.py  todos.json  todos.py  todos_class.json  todos_old.py
todo/: todo.py
todos/: todos.json  todos.py
todos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
