[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["chincherpa <accounts@mail.de>"]

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.3"
emoji = "^0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
